# MainBot

./: .env  .gitignore  .replit  Makefile  Pasted--analiticfindchia--1726788552132.txt  Pasted-2024-09-19-22-01-06-467-httpx-INFO-HTTP-Request-POST-https-api-telegram-org-botyour-telegra-1726783412499.txt  README.md  Structured_APIGPT.txt  Structured_APITG_New.txt  assistans_info.txt  main.py  pyproject.toml  pytest.ini  run_report.py  run_web_ui.py  threads.json
bot/: __init__.py  chatgpt_assistant.py  chatgpt_assistant.py~  contact_handler.py  daily_report.py  database.py  telegram_bot.py  telegram_bot.py~
dialogs/: 487947355_AVas112_dialogs.txt_1  487947355_AVas112_dialogs.txt_2  487947355_AVas112_dialogs.txt_3  6390078179_W3M0V3_dialogs.txt
responses/: 487947355_AVas112_response.txt  487947355_response.txt  6390078179_W3M0V3_response.txt  901428846_response.txt  responses.txt
scripts/: check_status.sh  enable_autostart.sh  manage_services.sh  restart_services.sh  start_services.sh  stop_services.sh  управление_сервисами.sh
src/: chatgpt_assistant.py  daily_report.py  database.py  main.py  reminder_service.py  telegram_bot.py  telegram_notifications.py  web_ui_main.py
src/config/: __init__.py  _abc.py  config.py  logging_config.py
src/utils/: email_service.py  proxy.py
src/web_ui/: __init__.py  dependencies.py  router.py  schemas.py
src/web_ui/static/css/: styles.css
src/web_ui/static/js/: main.js
src/web_ui/templates/: base.html  dialog.html  successful_dialogs.html  users_list.html
tests/: README.md  __init__.py  conftest.py  test_chatgpt_assistant.py  test_config.py  test_daily_report.py  test_database.py  test_email_service.py  test_reminder_service.py  test_telegram_bot.py
tests/unit/: __init__.py  test_daily_report.py  test_database.py  test_reminder_service.py  test_telegram_bot.py
tests/unit/chatgpt_assistant/: test_chatgpt_assistant.py  test_chatgpt_assistant_integration.py  test_chatgpt_assistant_performance.py
