[tool.poetry]
name = "mainbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openai = "^1.46.1"
python-telegram-bot = "^21.6"
python-dotenv = "^1.0.1"
aiofiles = "^23.2.1"
aiosqlite = "^0.19.0"
apscheduler = "^3.11.0"
pydantic = "2.6.1"
pydantic-settings = "2.1.0"
httpx = {extras = ["socks"], version = "^0.27.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
